--- a/tox.ini
+++ b/tox.ini
@@ -8,11 +8,7 @@ skip_missing_interpreters = true
 description = run tests with {basepython}
 setenv = PIP_DISABLE_VERSION_CHECK = 1
          COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-deps = mock
-       pytest >= 3.0.0, <4
-       pytest-cov >= 2.5.1, <3
-       pytest-mock >= 1.10.0, <2
-       pytest-timeout >= 1.3.0, <2
+extras = testing
 commands = pytest {posargs:\
            --cov=virtualenv \
            --cov-config="{toxinidir}/tox.ini"  \
@@ -41,9 +37,9 @@ source = src
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
               generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
-deps = {[testenv]deps}
-       coverage >= 4.4.1, < 5
+deps = coverage >= 4.4.1, < 5
        diff_cover
+extras =
 skip_install = True
 passenv = DIFF_AGAINST
 setenv = COVERAGE_FILE={toxworkdir}/.coverage
@@ -57,7 +53,7 @@ commands = coverage erase --rcfile="{toxinidir}/tox.ini"
 [testenv:cross_python2]
 description = test creating a python3 venv with a python2-based virtualenv
 basepython = python2
-deps =
+extras =
 commands = virtualenv -p python3 {envtmpdir}/{envname}
            {envtmpdir}/{envname}/bin/python -V 2>&1 | grep "Python 3"
 
@@ -65,14 +61,14 @@ commands = virtualenv -p python3 {envtmpdir}/{envname}
 [testenv:cross_python3]
 description = test creating a python2 venv with a python3-based virtualenv
 basepython = python3
-deps =
+extras =
 commands = virtualenv -p python2 {envtmpdir}/{envname}
            {envtmpdir}/{envname}/bin/python -V 2>&1 | grep "Python 2"
 
 [testenv:docs]
 basepython = python3
 description = build documentation
-deps = sphinx
+extras = docs
 commands = sphinx-build -d "{envtmpdir}/doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
@@ -88,7 +84,7 @@ commands = pip wheel -w {envtmpdir}/build --no-deps .
 [testenv:embed]
 description = embed dependencies into virtualenv.py
 skip_install = true
-deps =
+extras =
 commands = python {toxinidir}/bin/rebuild-script.py
 
 [testenv:fix_lint]
