add dev tox env

--- a/tox.ini
+++ b/tox.ini
@@ -113,3 +113,12 @@ exclude = virtualenv_embedded/site.py
 
 [pep8]
 max-line-length = 120
+
+[testenv:dev]
+description = generate a DEV environment
+extras = testing, docs
+# required to make looponfail reload on every source code change
+usedevelop = True
+basepython = python3.7
+commands = python -m pip list --format=columns
+           python -c 'import sys; print(sys.executable)'
