--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,11 +11,11 @@ repos:
     -   id: blacken-docs
         additional_dependencies: [black==18.9b0]
         language_version: python3.7
--   repo: https://github.com/gaborbernat/seed-isort-config
-    rev: master
+-   repo: https://github.com/asottile/seed-isort-config
+    rev: v1.3.0
     hooks:
     -   id: seed-isort-config
-        args: [--application-directories, "src:tests:virtualenv_embedded:docs:bin"]
+        args: [--application-directories, '.:src']
 -   repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.4
     hooks:
