--- a/tox.ini
+++ b/tox.ini
@@ -103,7 +103,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = __builtin__,_winreg,mock,pytest,sets,setuptools,sitecustomize,sphinx_rtd_theme,urlparse,usercustomize,winreg
+known_third_party = mock,pytest
 
 [flake8]
 max-complexity = 22
