call from tox, and print changes

--- a/tox.ini
+++ b/tox.ini
@@ -87,6 +87,12 @@ skip_install = true
 extras =
 commands = python {toxinidir}/bin/rebuild-script.py
 
+[testenv:upgrade]
+description = upgrade pip/wheels/setuptools to latest
+skip_install = true
+extras = pip >= 18.1.0
+commands = python {toxinidir}/bin/rebuild-support.py
+
 [testenv:fix_lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 basepython = python3.7
