--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.3.0
-envlist = fix_lint, embed, py{27,34,35,36,37}, pypy{,3}, cross_python{2,3}, docs, package_readme
+envlist = fix_lint, embed, py{27,34,35,36,37}, pypy{,3}, jython, cross_python{2,3}, docs, package_readme
 isolated_build = true
 skip_missing_interpreters = true
 
@@ -9,18 +9,22 @@ description = run tests with {basepython}
 setenv = PIP_DISABLE_VERSION_CHECK = 1
          COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
 extras = testing
-commands = pytest {posargs:\
-           --cov=virtualenv \
-           --cov-config="{toxinidir}/tox.ini"  \
-           --timeout=180 \
-           --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
-           . }
+commands = coverage run --source=virtualenv \
+                        --rcfile="{toxinidir}/tox.ini" \
+                {envbindir}/pytest tests
+                        {posargs:\
+                                 --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml}
+                                  !jython:     --timeout=180 \
+                        }
+           coverage combine --rcfile="{toxinidir}/tox.ini"
+           !jython: coverage report -m --rcfile="{toxinidir}/tox.ini"
 
 [testenv:.package]
 deps =
 
 [coverage:run]
 branch = false
+parallel = true
 
 [coverage:report]
 skip_covered = True
@@ -45,7 +49,7 @@ passenv = DIFF_AGAINST
 setenv = COVERAGE_FILE={toxworkdir}/.coverage
 commands = coverage erase --rcfile="{toxinidir}/tox.ini"
            coverage combine --rcfile="{toxinidir}/tox.ini"
-           coverage report -m --rcfile="{toxinidir}/tox.ini"
+           coverage report --show-missing --rcfile="{toxinidir}/tox.ini"
            coverage xml -o {toxworkdir}/coverage.xml --rcfile="{toxinidir}/tox.ini"
            coverage html -d {toxworkdir}/htmlcov --rcfile="{toxinidir}/tox.ini"
            diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
