--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands = coverage run --source=virtualenv \
                                   !jython:     --timeout=180 \
                         }
            coverage combine --rcfile="{toxinidir}/tox.ini"
-           !jython: coverage report -m --rcfile="{toxinidir}/tox.ini"
+           !jython: coverage report --show-missing --rcfile="{toxinidir}/tox.ini"
 
 [testenv:.package]
 deps =
