--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,9 @@ trigger:
 
 jobs:
 - template: azure-run-tox-env.yml
+  parameters: {tox: jython, python: jython, os: linux}
+
+- template: azure-run-tox-env.yml
   parameters: {tox: fix_lint, python: 3.7}
 - template: azure-run-tox-env.yml
   parameters: {tox: embed, python: 3.7}
