--- a/tox.ini
+++ b/tox.ini
@@ -11,13 +11,13 @@ setenv = PIP_DISABLE_VERSION_CHECK = 1
 extras = testing
 commands = coverage run --source=virtualenv \
                         --rcfile="{toxinidir}/tox.ini" \
-                {envbindir}/pytest tests
+                -m pytest tests \
                         {posargs:\
-                                 --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml}
+                                 --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
                                   !jython:     --timeout=180 \
                         }
            coverage combine --rcfile="{toxinidir}/tox.ini"
-           !jython: coverage report -m --rcfile="{toxinidir}/tox.ini"
+           !jython: coverage report --show-missing --rcfile="{toxinidir}/tox.ini"
 
 [testenv:.package]
 deps =
@@ -38,6 +38,10 @@ source = src
          */src
          *\src
 
+[testenv:jython]
+# pip 18.1 cache does not work with jython
+install_command = python -m pip install {opts} {packages} --no-cache
+
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
               generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
@@ -47,8 +51,7 @@ extras =
 skip_install = True
 passenv = DIFF_AGAINST
 setenv = COVERAGE_FILE={toxworkdir}/.coverage
-commands = coverage erase --rcfile="{toxinidir}/tox.ini"
-           coverage combine --rcfile="{toxinidir}/tox.ini"
+commands = coverage combine --rcfile="{toxinidir}/tox.ini"
            coverage report --show-missing --rcfile="{toxinidir}/tox.ini"
            coverage xml -o {toxworkdir}/coverage.xml --rcfile="{toxinidir}/tox.ini"
            coverage html -d {toxworkdir}/htmlcov --rcfile="{toxinidir}/tox.ini"
@@ -113,7 +116,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = mock,pytest
+known_third_party = pytest
 
 [flake8]
 max-complexity = 22
