--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,32 @@ build-backend = 'setuptools.build_meta'
 
 [tool.black]
 line-length = 120
+
+[tool.towncrier]
+package = "virtualenv"
+package_dir = "src"
+filename = "docs/changes.rst"
+directory = "news/"
+title_format = "{version} ({project_date})"
+issue_format = "`#{issue} <https://github.com/pypa/virtualenv/issues/{issue}>`_"
+template = "news/_template.rst"
+
+  [[tool.towncrier.type]]
+  directory = "removal"
+  name = "Deprecations and Removals"
+  showcontent = true
+
+  [[tool.towncrier.type]]
+  directory = "feature"
+  name = "Features"
+  showcontent = true
+
+  [[tool.towncrier.type]]
+  directory = "bugfix"
+  name = "Bug Fixes"
+  showcontent = true
+
+  [[tool.towncrier.type]]
+  directory = "doc"
+  name = "Improved Documentation"
+  showcontent = true
