Jython enable for coverage report.

--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,7 @@ show_missing = True
 source = src
          .tox/*/lib/python*/site-packages
          .tox/pypy*/site-packages
+         .tox/jython/Lib/site-packages
          .tox\*\Lib\site-packages
          */src
          *\src
