--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ skip_missing_interpreters = true
 description = run tests with {basepython}
 setenv = PIP_DISABLE_VERSION_CHECK = 1
          COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-passenv = https_proxy http_proxy no_proxy HOME PYTEST_ADDOPTS
+passenv = https_proxy http_proxy no_proxy HOME PYTEST_ADDOPTS CI_RUN
 extras = testing
 commands = coverage run --source=virtualenv \
                         --rcfile="{toxinidir}/tox.ini" \
