--- a/tox.ini
+++ b/tox.ini
@@ -117,7 +117,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = pytest
+known_third_party = pytest,six
 
 [flake8]
 max-complexity = 22
