--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ skip_missing_interpreters = true
 description = run tests with {basepython}
 setenv = PIP_DISABLE_VERSION_CHECK = 1
          COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-passenv = https_proxy http_proxy no_proxy HOME PYTEST_ADDOPTS
+passenv = https_proxy http_proxy no_proxy HOME PYTEST_ADDOPTS PYTEST_DEBUG CI_RUN TERM
 extras = testing
 commands = coverage run --source=virtualenv \
                         --rcfile="{toxinidir}/tox.ini" \
@@ -117,7 +117,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = pytest
+known_third_party = pytest,six
 
 [flake8]
 max-complexity = 22
