Split changes for release. Generate draft changelog into changes. Use simplified virtualenv changelog sections.

--- a/tox.ini
+++ b/tox.ini
@@ -78,7 +78,7 @@ commands = virtualenv -p python2 {envtmpdir}/{envname}
 basepython = python3
 description = build documentation
 extras = docs
-commands = sphinx-build -d "{envtmpdir}/doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
+commands = sphinx-build -d "{envtmpdir}/doctree" docs "{toxworkdir}/docs_out" --color -bhtml {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:package_readme]
