--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@ dist
 *.egg
 .eggs
 
-# documentation
-docs/_build
-
 # python
 *.py[cod]
 *$py.class
@@ -17,10 +14,8 @@ docs/_build
 .*_cache
 .DS_Store
 
-# tbd
-/tests/test_activate_output.actual
-/tests/test_activate_output.expected
-
 # IDE
 .idea
 .vscode
+
+/docs/_draft.rst
