--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,30 +9,43 @@ build-backend = 'setuptools.build_meta'
 line-length = 120
 
 [tool.towncrier]
-package = "virtualenv"
-package_dir = "src"
-filename = "docs/changes.rst"
-directory = "news/"
-title_format = "{version} ({project_date})"
-issue_format = "`#{issue} <https://github.com/pypa/virtualenv/issues/{issue}>`_"
-template = "news/_template.rst"
+    package = "virtualenv"
+    filename = "docs/changes.rst"
+    directory = "docs/changelog"
+    template = "docs/changelog/template.jinja2"
+    title_format = "v{version} ({project_date})"
+    issue_format = "`#{issue} <https://github.com/pypa/virtualenv/issues/{issue}>`_"
+    underlines = ["-", "^"]
 
-  [[tool.towncrier.type]]
-  directory = "removal"
-  name = "Deprecations and Removals"
-  showcontent = true
+    [[tool.towncrier.section]]
+        path = ""
 
-  [[tool.towncrier.type]]
-  directory = "feature"
-  name = "Features"
-  showcontent = true
+    [[tool.towncrier.type]]
+        directory = "bugfix"
+        name = "Bugfixes"
+        showcontent = true
 
-  [[tool.towncrier.type]]
-  directory = "bugfix"
-  name = "Bug Fixes"
-  showcontent = true
+    [[tool.towncrier.type]]
+        directory = "feature"
+        name = "Features"
+        showcontent = true
 
-  [[tool.towncrier.type]]
-  directory = "doc"
-  name = "Improved Documentation"
-  showcontent = true
+    [[tool.towncrier.type]]
+        directory = "deprecation"
+        name = "Deprecations (removal in next major release)"
+        showcontent = true
+
+    [[tool.towncrier.type]]
+        directory = "breaking"
+        name = "Backward incompatible changes"
+        showcontent = true
+
+    [[tool.towncrier.type]]
+        directory = "doc"
+        name = "Documentation"
+        showcontent = true
+
+    [[tool.towncrier.type]]
+        directory = "misc"
+        name = "Miscellaneous"
+        showcontent = true
