add release tox task to cut a new release (create release PR branch, run towncrier)

--- a/tox.ini
+++ b/tox.ini
@@ -78,7 +78,7 @@ commands = virtualenv -p python2 {envtmpdir}/{envname}
 basepython = python3
 description = build documentation
 extras = docs
-commands = sphinx-build -d "{envtmpdir}/doctree" docs "{toxworkdir}/docs_out" --color -bhtml {posargs}
+commands = sphinx-build -d "{envtmpdir}/doctree" -W docs "{toxworkdir}/docs_out" --color -bhtml {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:package_readme]
@@ -118,7 +118,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = pytest,six
+known_third_party = git,packaging,pytest,six
 
 [flake8]
 max-complexity = 22
@@ -132,8 +132,15 @@ max-line-length = 120
 [testenv:dev]
 description = generate a DEV environment
 extras = testing, docs
-# required to make looponfail reload on every source code change
 usedevelop = True
-basepython = python3.7
 commands = python -m pip list --format=columns
            python -c 'import sys; print(sys.executable)'
+
+[testenv:release]
+description = do a release, required posarg of the version number
+basepython = python3.7
+passenv = *
+deps = gitpython >= 2.1.10, < 3
+       towncrier >= 18.5.0
+       packaging  >= 17.1
+commands = python {toxinidir}/tasks/release.py --version {posargs}
