simplify coverage path alias and support Azure CI

--- a/tox.ini
+++ b/tox.ini
@@ -33,12 +33,9 @@ show_missing = True
 
 [coverage:paths]
 source = .
-         .tox/*/lib/python*/site-packages
-         .tox/pypy*/site-packages
-         .tox/jython/Lib/site-packages
-         .tox\*\Lib\site-packages
-         */virtualenv
-         *\virtualenv
+         .tox/*/*/site-packages
+         .tox/*/*/*/site-packages
+         */s
 
 [testenv:jython]
 # pip 18.1 cache does not work with jython
