revert to a non src layout (#1264)
Fixes #1241.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion = 3.3.0
+minversion = 3.6.1
 envlist = fix_lint, embed, py{27,34,35,36,37}, pypy{,3}, jython, cross_python{2,3}, docs, package_readme
 isolated_build = true
 skip_missing_interpreters = true
@@ -32,13 +32,10 @@ skip_covered = True
 show_missing = True
 
 [coverage:paths]
-source = src
-         .tox/*/lib/python*/site-packages
-         .tox/pypy*/site-packages
-         .tox/jython/Lib/site-packages
-         .tox\*\Lib\site-packages
-         */src
-         *\src
+source = .
+         .tox/*/*/site-packages
+         .tox/*/*/*/site-packages
+         */s
 
 [testenv:jython]
 # pip 18.1 cache does not work with jython
