--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ skip_missing_interpreters = true
 description = run tests with {basepython}
 setenv = PIP_DISABLE_VERSION_CHECK = 1
          COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
+         jython: PIP_NO_CACHE_DIR = off
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_ADDOPTS PYTEST_DEBUG CI_RUN TERM
 extras = testing
 commands = coverage run --source=virtualenv \
