--- a/tox.ini
+++ b/tox.ini
@@ -91,14 +91,16 @@ commands = pip wheel -w {envtmpdir}/build --no-deps .
 [testenv:embed]
 description = embed dependencies into virtualenv.py
 skip_install = true
+changedir = {toxinidir}/bin
 extras =
-commands = python {toxinidir}/bin/rebuild-script.py
+commands = python rebuild-script.py
 
 [testenv:upgrade]
 description = upgrade pip/wheels/setuptools to latest
 skip_install = true
 extras = pip >= 18.1.0
-commands = python {toxinidir}/bin/rebuild-support.py
+changedir = {toxinidir}/bin
+commands = python rebuild-support.py
 
 [testenv:fix_lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
