make assertions on packaging, recommend tox for all testings

--- a/tox.ini
+++ b/tox.ini
@@ -91,16 +91,16 @@ commands = pip wheel -w {envtmpdir}/build --no-deps .
 [testenv:embed]
 description = embed dependencies into virtualenv.py
 skip_install = true
-changedir = {toxinidir}/bin
+changedir = {toxinidir}/tasks
 extras =
-commands = python rebuild-script.py
+commands = python update_embedded.py
 
 [testenv:upgrade]
 description = upgrade pip/wheels/setuptools to latest
 skip_install = true
 extras = pip >= 18.1.0
-changedir = {toxinidir}/bin
-commands = python rebuild-support.py
+changedir = {toxinidir}/tasks
+commands = python upgrade_wheels.py
 
 [testenv:fix_lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
@@ -143,4 +143,5 @@ passenv = *
 deps = gitpython >= 2.1.10, < 3
        towncrier >= 18.5.0
        packaging  >= 17.1
-commands = python {toxinidir}/tasks/release.py --version {posargs}
+changedir = {toxinidir}/tasks
+commands = python release.py --version {posargs}
