--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,14 @@
-recursive-include docs *
-recursive-include tests *.py *.sh *.expected
+include scripts/virtualenv
+include virtualenv.py
 recursive-include virtualenv_support *.whl
 recursive-include virtualenv_embedded *
-recursive-exclude docs/_templates *
-recursive-exclude docs/_build *
 include virtualenv_support/__init__.py
-include bin/*
-include scripts/*
-include *.py
+include pyproject.toml
+
 include AUTHORS.txt
 include LICENSE.txt
-include pyproject.toml
+
+recursive-include tests *
+recursive-include docs *
+include tasks/*
+include tox.ini
