Move to a declarative build script via setup.cfg, improve package metadata

--- a/tox.ini
+++ b/tox.ini
@@ -12,31 +12,13 @@ setenv = PIP_DISABLE_VERSION_CHECK = 1
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_ADDOPTS PYTEST_DEBUG CI_RUN TERM
 extras = testing
 commands = coverage run --source=virtualenv \
-                        --rcfile="{toxinidir}/tox.ini" \
                 -m pytest tests \
                         {posargs:\
                                  --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
                                   !jython:     --timeout=180 \
                         }
-           coverage combine --rcfile="{toxinidir}/tox.ini"
-           !jython: coverage report --show-missing --rcfile="{toxinidir}/tox.ini"
-
-[testenv:.package]
-deps =
-
-[coverage:run]
-branch = false
-parallel = true
-
-[coverage:report]
-skip_covered = True
-show_missing = True
-
-[coverage:paths]
-source = .
-         .tox/*/*/site-packages
-         .tox/*/*/*/site-packages
-         */s
+           coverage combine
+           !jython: coverage report --show-missing
 
 [testenv:jython]
 # pip 18.1 cache does not work with jython
@@ -51,10 +33,10 @@ extras =
 skip_install = True
 passenv = DIFF_AGAINST
 setenv = COVERAGE_FILE={toxworkdir}/.coverage
-commands = coverage combine --rcfile="{toxinidir}/tox.ini"
-           coverage report --show-missing --rcfile="{toxinidir}/tox.ini"
-           coverage xml -o {toxworkdir}/coverage.xml --rcfile="{toxinidir}/tox.ini"
-           coverage html -d {toxworkdir}/htmlcov --rcfile="{toxinidir}/tox.ini"
+commands = coverage combine
+           coverage report --show-missing
+           coverage xml -o {toxworkdir}/coverage.xml
+           coverage html -d {toxworkdir}/htmlcov
            diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
 
 [testenv:cross_python2]
@@ -118,7 +100,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = git,packaging,pytest,six
+known_third_party = git,packaging,pytest,setuptools,six
 
 [flake8]
 max-complexity = 22
