add pytest xdist to speed up tests
jython seems to lack the multiprocessing module, so cannot help there

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,8 @@ commands = coverage run --source=virtualenv \
                 -m pytest tests \
                         {posargs:\
                                  --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
-                                  !jython:     --timeout=180 \
+                                  !jython: --timeout=180 \
+                                  !jython: -n auto \
                         }
            coverage combine
            !jython: coverage report --show-missing
