--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ testing = mock;python_version<"3.3"
           pytest-timeout >= 1.3.0, <2; platform_python_implementation!="Jython"
           xonsh; python_version>="3.4"
           six >= 1.10.0, < 2
+          pytest-xdist; platform_python_implementation!="Jython"
 docs = sphinx >= 1.8.0, < 2
        towncrier >= 18.5.0
        sphinx_rtd_theme >= 0.4.2, < 1
