--- a/tox.ini
+++ b/tox.ini
@@ -122,6 +122,7 @@ commands = python -m pip list --format=columns
 [testenv:release]
 description = do a release, required posarg of the version number
 basepython = python3.7
+skip_install = true
 passenv = *
 deps = gitpython >= 2.1.10, < 3
        towncrier >= 18.5.0
