--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands = coverage run --source=virtualenv \
                         {posargs:\
                                  --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
                                   !jython: --timeout=180 \
-                                  !jython: -n auto \
+                                  !jython: -n 0 \
                         }
            coverage combine
            !jython: coverage report --show-missing
