Fix testenv:upgrade deps in tox config

--- a/tox.ini
+++ b/tox.ini
@@ -81,7 +81,7 @@ commands = python update_embedded.py
 [testenv:upgrade]
 description = upgrade pip/wheels/setuptools to latest
 skip_install = true
-extras = pip >= 18.1.0
+deps = pip >= 18.1.0
 changedir = {toxinidir}/tasks
 commands = python upgrade_wheels.py
 
