add test for virtualenv using pypi with custom https certificate

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,8 @@ testing = mock;python_version<"3.3"
           xonsh; python_version>="3.4"
           six >= 1.10.0, < 2
           pytest-xdist; platform_python_implementation!="Jython"
+          pytest-localserver
+          pypiserver
 docs = sphinx >= 1.8.0, < 2
        towncrier >= 18.5.0
        sphinx_rtd_theme >= 0.4.2, < 1
