--- a/tox.ini
+++ b/tox.ini
@@ -101,7 +101,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = git,packaging,pytest,setuptools,six
+known_third_party = git,packaging,pypiserver,pytest,pytest_localserver,setuptools,six
 
 [flake8]
 max-complexity = 22
