--- a/azure-run-tox-env.yml
+++ b/azure-run-tox-env.yml
@@ -56,6 +56,8 @@ jobs:
           - script: "sudo apt-get update && sudo apt-get install fish csh"
             displayName: install fish and csh
       - ${{ if eq(parameters.os, 'macOs') }}:
+          - script: "brew update -vvv"
+            displayName: update brew
           - script: "brew install fish tcsh"
             displayName: install fish and csh
 
