--- a/tox.ini
+++ b/tox.ini
@@ -6,11 +6,13 @@ skip_missing_interpreters = true
 
 [testenv]
 description = run tests with {basepython}
-setenv = PIP_DISABLE_VERSION_CHECK = 1
-         COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
+deps = pip >= 19.0.1
+setenv = COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
+         # separate jython form other python caches
          jython: PIP_NO_CACHE_DIR = off
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_ADDOPTS PYTEST_DEBUG CI_RUN TERM
 extras = testing
+install_command = python -m pip install {opts} {packages} --disable-pip-version-check
 commands = coverage run --source=virtualenv \
                 -m pytest tests \
                         {posargs:\
@@ -22,13 +24,13 @@ commands = coverage run --source=virtualenv \
            !jython: coverage report --show-missing
 
 [testenv:jython]
-# pip 18.1 cache does not work with jython
-install_command = python -m pip install {opts} {packages} --no-cache
+deps = pip == 18.1.0
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
               generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
-deps = coverage >= 4.4.1, < 5
+deps = {[testenv]deps}
+       coverage >= 4.4.1, < 5
        diff_cover
 extras =
 skip_install = True
@@ -64,8 +66,8 @@ commands = sphinx-build -d "{envtmpdir}/doctree" -W docs "{toxworkdir}/docs_out"
 
 [testenv:package_readme]
 description = check that the long description is valid (need for PyPi)
-deps = twine >= 1.12.1
-       pip >= 18.0.0
+deps = {[testenv]deps}
+       twine >= 1.12.1
 skip_install = true
 extras =
 commands = pip wheel -w {envtmpdir}/build --no-deps .
@@ -81,7 +83,6 @@ commands = python update_embedded.py
 [testenv:upgrade]
 description = upgrade pip/wheels/setuptools to latest
 skip_install = true
-deps = pip >= 18.1.0
 changedir = {toxinidir}/tasks
 commands = python upgrade_wheels.py
 
@@ -89,7 +90,8 @@ commands = python upgrade_wheels.py
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 basepython = python3.7
 passenv = *
-deps = pre-commit == 1.12.0
+deps = {[testenv]deps}
+       pre-commit == 1.12.0
 skip_install = True
 commands = pre-commit run --all-files --show-diff-on-failure
            python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
@@ -124,7 +126,8 @@ description = do a release, required posarg of the version number
 basepython = python3.7
 skip_install = true
 passenv = *
-deps = gitpython >= 2.1.10, < 3
+deps = {[testenv]deps}
+       gitpython >= 2.1.10, < 3
        towncrier >= 18.5.0
        packaging  >= 17.1
 changedir = {toxinidir}/tasks
