--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps = pip >= 19.0.1
 setenv = COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
          # separate jython form other python caches
          jython: PIP_NO_CACHE_DIR = off
-passenv = https_proxy http_proxy no_proxy HOME PYTEST_ADDOPTS PYTEST_DEBUG CI_RUN TERM
+passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
 commands = coverage run --source=virtualenv \
