fix pypy2 version number

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ jobs:
 - template: azure-run-tox-env.yml
   parameters: {tox: jython, python: '3.7', os: linux}
 - template: azure-run-tox-env.yml
-  parameters: {tox: pypy, python: pypy, os: linux}
+  parameters: {tox: pypy, python: pypy2, os: linux}
 - template: azure-run-tox-env.yml
   parameters: {tox: pypy3, python: pypy3, os: linux}
 
